docs: swagger.yaml
